Update ru.json (#200)
Co-authored-by: Yorunokyujitsu <164279972+Yorunokyujitsu@users.noreply.github.com>

--- a/assets/romfs/i18n/ru.json
+++ b/assets/romfs/i18n/ru.json
@@ -575,14 +575,14 @@
   "Export NSZ": "",
   "Exports to NSZ (compressed NSP)": "",
   "Are you sure you want to delete ": "Вы уверены, что хотите удалить ",
-  "Advanced options": "",
-  "Refresh": "",
-  "Create contents folder": "",
+  "Advanced options": "Расширенные опции",
+  "Refresh": "Обновить",
+  "Create contents folder": "Создать папку Contents",
   "Folder create failed!": "",
   "Folder created!": "",
-  "Create save": "",
+  "Create save": "Создать сохранение",
   "Select user to create save for": "",
-  "Delete title cache": "",
+  "Delete title cache": "Удалить кэш заголовков",
   "Are you sure you want to delete the title cache?": "",
   "Updating application record list": "Обновление списка записей приложений",
   "Delete failed!": "Ошибка удаления!",
