Updated German Translation (#214)
* Updated German Translation

Just updated the German Translation, it is probably still not perfect

* Missing semicolons

---------

Co-authored-by: Yorunokyujitsu <164279972+Yorunokyujitsu@users.noreply.github.com>

--- a/assets/romfs/i18n/de.json
+++ b/assets/romfs/i18n/de.json
@@ -17,13 +17,13 @@
   "Games": "Spiele",
   "Meta": "",
   "Nca": "",
-  "GC": "",
+  "GC": "GC",
   "GitHub": "GitHub",
   "Apps": "hb-Apps",
-  "IRS": "",
+  "IRS": "IRS",
   "MTP": "",
   "Saves": "",
-  "USB": "",
+  "USB": "USB",
   "Level 0 (no compression)": "",
   "Level 1": "",
   "Level 2": "",
@@ -91,10 +91,10 @@
   "Removes the background music file": "",
   "No background music file is set": "",
   "Menus": "",
-  "Web": "",
-  "Enter custom URL": "",
-  "Select URL": "",
-  "Enter URL": "",
+  "Web": "Web",
+  "Enter custom URL": "Benutzerdefinierte URL eingeben",
+  "Select URL": "URL auswählen",
+  "Enter URL": "URL eingeben",
   "web_browser_info": [
     "Launch the built-in web browser.\n",
     "NOTE: The browser is very limted, some websites will fail to load and there's a 30 minute timeout which closes the browser"
@@ -116,7 +116,7 @@
     "Mount options only require a URL and Name be set, with other fields being optional, such as port, user, pass etc.\n",
     "Any changes made will require restarting Sphaira to take effect."
   ],
-  "Boost CPU during transfer": "",
+  "Boost CPU during transfer": "CPU-Takt während der Übertragung erhöhen",
   "transfer_boost_info": [
     "Enables boost mode during transfers which can improve transfer speed. ",
     "This sets the CPU to 1785mhz and lowers the GPU 76mhz"
@@ -126,42 +126,42 @@
   "Set center menu": "",
   "Press OK to restart Sphaira": "Drücke OK um sphaira erneut zustarten",
   "Set the menu that appears on the center tab.": "",
-  "Set left-side menu": "",
+  "Set left-side menu": "Linkes Menü festlegen",
   "Set the menu that appears on the left tab.": "",
-  "Set right-side menu": "",
+  "Set right-side menu": "Rechtes Menü festlegen",
   "Set the menu that appears on the right tab.": "",
-  "Install options": "",
+  "Install options": "Installationsoptionen",
   "install_options_info": [
     "Change the install options.",
     "You can enable installing from here."
   ],
   "Export options": "",
   "Change the export options.": "",
-  "Install Options": "",
+  "Install Options": "Installationsoptionen",
   "System memory": "NAND Systemspeicher",
   "microSD card": "SD-Karte",
-  "Enable sysmmc": "",
+  "Enable sysmmc": "sysMMC aktivieren",
   "Enables installing whilst in sysMMC mode.": "",
-  "Enable emummc": "",
+  "Enable emummc": "emuMMC aktivieren",
   "Enables installing whilst in emuMMC mode.": "",
   "Install location": "Einhängepunkt",
-  "Allow downgrade": "",
+  "Allow downgrade": "Downgrade erlauben",
   "Allows for installing title updates that are lower than the currently installed update.": "",
-  "Skip if already installed": "",
+  "Skip if already installed": "Überspringen, wenn bereits installiert",
   "Skips installing titles / ncas if they're already installed.": "",
-  "Ticket only": "",
+  "Ticket only": "Nur Ticket",
   "Installs tickets only, useful if the title was already installed however the tickets were missing or corrupted.": "",
-  "Skip base": "",
+  "Skip base": "Basis überspringen",
   "Skips installing the base application.": "",
-  "Skip patch": "",
+  "Skip patch": "Patch überspringen",
   "Skips installing updates.": "",
-  "Skip dlc": "",
+  "Skip dlc": "DLC überspringen",
   "Skips installing DLC.": "",
-  "Skip data patch": "",
+  "Skip data patch": "Daten-Patch überspringen",
   "Skips installing DLC update (data patch).": "",
-  "Skip ticket": "",
+  "Skip ticket": "Ticket überspringen",
   "Skips installing tickets, not recommended.": "",
-  "Skip NCA hash verify": "",
+  "Skip NCA hash verify": "NCA-Hash-Prüfung überspringen",
   "skip_nca_info": [
     "Enables the option to skip sha256 verification. This is a hash over the entire NCA. ",
     "It is used to verify that the NCA is valid / not corrupted. ",
@@ -169,19 +169,19 @@
     "That check performs various hash checks, including the hash over the NCA.\n",
     "It is recommended to keep this disabled."
   ],
-  "Skip RSA header verify": "",
+  "Skip RSA header verify": "RSA-Header-Prüfung überspringen",
   "nca_verify_info": [
     "Enables the option to skip RSA NCA fixed key verification. ",
     "This is a hash over the NCA header. It is used to verify that the header has not been modified. ",
     "The header is signed by nintendo, thus it cannot be forged, and is reliable to detect modified NCA headers (such as NSP/XCI converts).\n",
     "It is recommended to keep this disabled, unless you need to install nsp/xci converts."
   ],
-  "Skip RSA NPDM verify": "",
+  "Skip RSA NPDM verify": "RSA-NPDM-Prüfung überspringen",
   "npdm_verify_info": [
     "Enables the option to skip RSA NPDM fixed key verification.\n",
     "Currently, this option is stubbed (not implemented)."
   ],
-  "Ignore distribution bit": "",
+  "Ignore distribution bit": "Distributionsbit ignorieren",
   "nca_distbit_info": [
     "If set, it will ignore the distribution bit in the NCA header. ",
     "The distribution bit is used to signify whether a NCA is Eshop or GameCard. ",
@@ -193,40 +193,40 @@
     "[Requires keys] Converts personalised tickets to common (fake) tickets.\n",
     "It is recommended to keep this enabled."
   ],
-  "Convert to standard crypto": "",
+  "Convert to standard crypto": "In Standard-Verschlüsselung konvertieren",
   "titlekey_crypto_info": [
     "[Requires keys] Converts titlekey to standard crypto, also known as \"ticketless\".\n",
     "It is recommended to keep this disabled."
   ],
-  "Lower master key": "",
+  "Lower master key": "Master Key herabsetzen",
   "keyarea_crypto_info": [
     "[Requires keys] Encrypts the keak (key area key) with master key 0, which allows the game to be launched on every fw. ",
     "Implicitly performs standard crypto.\n",
     "Do note that just because the game can be launched on any fw (as it can be decrypted), doesn't mean it will work. It is strongly recommened to update your firmware and Atmosphere version in order to play the game, rather than enabling this option.\n",
     "It is recommended to keep this disabled."
   ],
-  "Lower system version": "",
+  "Lower system version": "Systemversion herabsetzen",
   "cnmt_fw_info": [
     "Sets the system_firmware field in the cnmt extended header to 0. ",
     "Note: if the master key is higher than fw version, the game still won't launch as the fw won't have the key to decrypt keak (see above).\n",
     "It is recommended to keep this disabled."
   ],
   "Export Options": "",
-  "Created nested folder": "",
+  "Created nested folder": "Verschachtelten Ordner erstellt",
   "game_folder_info": [
     "Creates a folder using the name of the game.",
     "For example, /name/name.xci",
     "Disabling this would use /name.xci"
   ],
-  "Append folder with .xci": "",
+  "Append folder with .xci": "Ordner mit .xci anhängen",
   "xci_folder_info": [
     "XCI dumps will name the folder with the .xci extension.",
     "For example, /name.xci/name.xci\n",
     "Some devices only function is the xci folder is named exactly the same as the xci."
   ],
-  "Trim XCI": "",
+  "Trim XCI": "XCI trimmen",
   "Removes the unused data at the end of the XCI, making the output smaller.": "",
-  "Label trimmed XCI": "",
+  "Label trimmed XCI": "Getrimmte XCI kennzeichnen",
   "Names the trimmed xci.\nFor example, /name/name (trimmed).xci": "",
   "Converts personalised ticket to a fake common ticket.": "",
   "NSZ level": "",
@@ -379,10 +379,10 @@
   "Installing is disabled, enable now?": "",
   "WARNING: Installing apps will lead to a ban!": "",
   "Installing enabled!": "",
-  "microSD card (/dumps/)": "",
+  "microSD card (/dumps/)": "microSD-Karte (/dumps/)",
   "USB export to PC (usb_export.py)": "",
-  "USB transfer (Switch 2 Switch)": "",
-  "/dev/null (Speed Test)": "",
+  "USB transfer (Switch 2 Switch)": "USB-Transfer (Switch zu Switch)",
+  "/dev/null (Speed Test)": "/dev/null (Speed-Test)",
   "Waiting for USB connection...": "",
   "USB connected, sending file list": "",
   "Sent file list, waiting for command...": "",
@@ -403,7 +403,7 @@
   "Writing Nca": "Schreibe NCA",
   "Updating ncm database": "Aktualisiere NCM-Datenbank",
   "Pushing application record": "Übertrage Anwendungsdaten",
-  "Failed to remove old forwarder, please manually remove it!": "",
+  "Failed to remove old forwarder, please manually remove it!": "Fehler beim entfernen des alten Forwarder, bitte manuell entfernen",
   "An error occurred": "Ein Fehler ist aufgetreten.",
   "If this message appears repeatedly, please open an issue.": "Bei wiederholtem Auftreten bitte Issue erstellen.",
   "Failed to load music": "",
@@ -459,13 +459,13 @@
   "AppStore Options": " hb-AppStore | Optionen",
   "Descending": "Absteigend ↓",
   "Ascending": "Aufsteigend ↑",
-  "List": "",
-  "Icon": "",
-  "Grid": "",
+  "List": "Liste",
+  "Icon": "Symbol",
+  "Grid": "Raster",
   "Filter": "Rubrik",
   "Sort": "Sortiert nach",
   "Order": "Anordnung",
-  "Layout": "",
+  "Layout": "Layout",
   "Search": "Suchen",
   "Empty!": "Keine Daten!",
   "Filter: %s | Sort: %s | Order: %s": "Rubrik: %s | Sort.nach.: %s | Ordnung: %s",
@@ -490,18 +490,18 @@
   "Launch ": "Starte ",
   "Launch option for: ": "Start Option für: ",
   "Select launcher for: ": "Wähle Launcher für: ",
-  "Install Selected files?": "",
+  "Install Selected files?": "Ausgewählte Dateien installieren?",
   "Installing ": "Installiert wird: ",
   "Installed ": "Installiert ",
   "File install failed!": "",
-  "Extracting ": "",
-  "Extract failed!": "",
-  "Extract success!": "",
-  "Compressing ": "",
-  "Compress failed!": "",
-  "Compress success!": "",
-  "Failed to delete directory": "",
-  "Failed to delete file": "",
+  "Extracting ": "Extrahiere ",
+  "Extract failed!": "Extraktion fehlgeschlagen!",
+  "Extract success!": "Extraktion erfolgreich!",
+  "Compressing ": "Komprimiere ",
+  "Compress failed!": "Komprimierung fehlgeschlagen!",
+  "Compress success!": "Komprimierung erfolgreich!",
+  "Failed to delete directory": "Ordner löschen fehlgeschlagen",
+  "Failed to delete file": "Datei löschen fehlgeschlagen",
   "Deleting": "Gelöscht wurde:",
   "Scanning ": "Gescannt wird: ",
   "Pasting": "Eingefügt wurde:",
@@ -509,8 +509,8 @@
   "Creating ": "Erstellt wird: ",
   "Copying ": "Kopiert wird: ",
   "Deleting ": "Gelöscht wird: ",
-  "Hashing": "",
-  "Failed to hash file...": "",
+  "Hashing": "Hash wird erstellt",
+  "Failed to hash file...": "Datei konnte nicht gehasht werden...",
   "File Options": "Datei - Ordner | Optionen",
   "Mount": "Einhängen",
   "Sort By": "Sortierung",
@@ -521,24 +521,24 @@
   "Cut": "Ausschneiden",
   "Copy": "Kopieren",
   "Paste": "Einfügen",
-  "Paste file(s)?": "",
+  "Paste file(s)?": "Datei(en) einfügen?",
   "Rename": "Umbenennen",
   "Set new name": "",
   "Failed to rename file: ": "",
   "Delete": "Löschen",
   "Delete Selected files?": "Ausgewähle Dateien löschen?",
   "Install Forwarder": "Forwarder installieren",
-  "Extract zip": "",
-  "Extract Options": "",
-  "Extract here": "",
-  "Extract to root": "",
-  "Are you sure you want to extract to root?": "",
-  "Extract to...": "",
-  "Enter the path to the folder to extract into": "",
-  "Compress to zip": "",
-  "Compress Options": "",
-  "Compress": "",
-  "Compress to...": "",
+  "Extract zip": "Zip extrahieren",
+  "Extract Options": "Extrahieroptionen",
+  "Extract here": "Hier extrahieren",
+  "Extract to root": "In Root-Ordner extrahieren",
+  "Are you sure you want to extract to root?": "Möchten Sie wirklich in den Root-Ordner extrahieren?",
+  "Extract to...": "Extrahieren nach...",
+  "Enter the path to the folder to extract into": "Pfad zum Zielordner eingeben",
+  "Compress to zip": "Als ZIP komprimieren",
+  "Compress Options": "Komprimierungsoptionen",
+  "Compress": "Komprimieren",
+  "Compress to...": "Komprimieren nach...",
   "Enter the path to the folder to compress into": "",
   "Create File": "Neue Datei",
   "Set File Name": "Dateiname festlegen",
@@ -547,24 +547,24 @@
   "View as text (unfinished)": "Als Text anzeigen",
   "Set as background music": "",
   "Failed to set default music path": "",
-  "Hash": "",
-  "Hash Options": "",
+  "Hash": "Hash",
+  "Hash Options": "Hash-Optionen",
   "Ignore read only": "Schreibschutz umgehen?",
   "Failed to mount FS.": "",
   "Close FileBrowser?": "Datei-Manager schließen?",
-  "Split": "",
+  "Split": "Teilen",
   "Close": "Schließe",
-  "FTP Install": "",
-  "Connection Type: WiFi | Strength: ": "",
-  "Connection Type: Ethernet": "",
-  "Connection Type: None": "",
-  "Host:": "",
-  "Port:": "",
-  "Username:": "",
-  "Password:": "",
-  "SSID:": "",
-  "Passphrase:": "",
-  "Success": "",
+  "FTP Install": "FTP Installation",
+  "Connection Type: WiFi | Strength: ": "Verbindungstyp: WIFI | Signalstärke: ",
+  "Connection Type: Ethernet": "Verbindungstyp: Ethernet",
+  "Connection Type: None": "Verbindungstyp: Keine",
+  "Host:": "Host",
+  "Port:": "Port",
+  "Username:": "Benutzername",
+  "Password:": "Passwort",
+  "SSID:": "SSID",
+  "Passphrase:": "Passphrase",
+  "Success": "Erfolg",
   "Failed to launch application": "",
   "Game Options": "Spiel | Optionen",
   "Hide forwarders": "Forwarders ausblenden",
@@ -584,9 +584,9 @@
   "Select user to create save for": "",
   "Delete title cache": "",
   "Are you sure you want to delete the title cache?": "",
-  "Updating application record list": "",
-  "Delete failed!": "",
-  "Delete successfull!": "",
+  "Updating application record list": "Anwendungseintragsliste wird aktualisiert",
+  "Delete failed!": "Löschen fehlgeschlagen!",
+  "Delete successfull!": "Löschen erfolgreich!",
   "Select content to export": "",
   "Export All": "",
   "Export Application": "",
@@ -645,10 +645,10 @@
   "SDK Version: %u.%u.%u.%u": "",
   "Export XCI (Gamecard)": "",
   "Export XCZ (Compressed XCI)": "",
-  "GameCard": "",
-  "Gc install failed!": "",
-  "Gc install success!": "",
-  "Select content to dump": "",
+  "GameCard": "GameCard",
+  "Gc install failed!": "GC installation fehlgeschlagen!",
+  "Gc install success!": "GC installation erfolgreich!",
+  "Select content to dump": "Zu dumpenden Inhalt auswählen",
   "Export All Bins": "",
   "Export XCI": "",
   "Export Card ID Set": "",
@@ -656,17 +656,17 @@
   "Export Certificate": "",
   "Export Initial Data": "",
   "Failed to mount GameCard filesystem": "",
-  "System memory %.1f GB": "",
-  "microSD card %.1f GB": "",
+  "System memory %.1f GB": "System Speicher %.1f GB",
+  "microSD card %.1f GB": "microSD Karte %.1f GB",
   "App-ID: 0%lX": "",
   "Key-Gen: %u (%s)": "",
   "Size: %.2f GB": "",
   "Base: %zu Patch: %zu Addon: %zu Data: %zu": "",
-  "Prev": "",
-  "Next": "",
+  "Prev": "Zurück",
+  "Next": "Weiter",
   "No GameCard inserted": "Keine Spielkarte eingelegt",
-  "WARNING: GameCard is already trimmed!": "",
-  "Continue": "",
+  "WARNING: GameCard is already trimmed!": "WARNUNG: Die GameCard wurde bereits getrimmt.",
+  "Continue": "Fortsetzen",
   "GameCard is trimmed, full dump is not possible!": "",
   "Downloading json": "Lade JSON-File",
   "Download": "Download",
@@ -698,10 +698,10 @@
     "Use the FileBrowser to delete them."
   ],
   "Failed to load image": "",
-  "Install failed!": "",
-  "Install success!": "",
+  "Install failed!": "Installation fehlgeschlagen!",
+  "Install success!": "Erfolgreich installiert!",
   "Drag'n'Drop (NSP, XCI, NSZ, XCZ) to the install folder": "",
-  "Failed to install, press B to exit...": "",
+  "Failed to install, press B to exit...": "Installation fehlgeschlagen, drücke B zum beenden...",
   "Irs": "IR-Sensor",
   "0 (Sideways)": "0° (Seitlich)",
   "90 (Flat)": "90° (Flach)",
@@ -742,10 +742,10 @@
   "Install apps via FTP.": "",
   "MTP Install": "",
   "Install apps via MTP.": "",
-  "USB Install": "",
+  "USB Install": "USB Installation",
   "Install apps via USB.\n\nA USB client is required on PC.": "",
   "View info on the inserted Game Card (GC). You can backup and install the inserted GC. To swap GC's, simply remove the old GC and insert the new one. You do not need to exit the menu.": "",
-  "IRS (Infrared Joycon Camera)": "",
+  "IRS (Infrared Joycon Camera)": "IRS (Infrarot JoyCon Kamera)",
   "InfraRed Sensor (IRS) is the small camera found on right JoyCon.": "",
   "Update avaliable: ": "Update verfügbar: ",
   "Download via the Network options!": "",
@@ -854,15 +854,15 @@
   "Set backup name": "",
   "Flushing zip to file": "",
   "Disable MTP for usb install": "",
-  "Re-enabled MTP": "",
-  "Installed via usb": "",
+  "Re-enabled MTP": "MTP wieder aktiviert",
+  "Installed via usb": "Über USB installiert",
   "USB install failed!": "",
-  "Usb install success!": "",
+  "Usb install success!": "USB Installation erfolgreich!",
   "Waiting for connection...": "Warten auf Verbindung...",
   "Connected, waiting for file list...": "Verbunden, warte auf die Dateiliste...",
   "Connected, starting transfer...": "Verbunden, Übertragung startet...",
   "Transferring data...": "Datenübertragung...",
-  "Press B to exit...": "",
+  "Press B to exit...": "Drücke B zum beenden..",
   "Failed to init usb, press B to exit...": "",
   "Detached": "",
   "Attached": "",
