Update Japanese and Korean.
- Update Japanese translation.
- Update Korean translation.
- Fix JSON syntax error (extra comma) in nl.json.
- Fix several translation strings.

--- a/assets/romfs/i18n/nl.json
+++ b/assets/romfs/i18n/nl.json
@@ -78,7 +78,7 @@
   "Customise the look of Sphaira by changing the theme": "",
   "Music": "Muziek",
   "bgm_enable_info": [
-    "Enable background music.\n",,
+    "Enable background music.",
     "Each theme can have it's own music file. ",
     "If a theme does not set a music file, the default music is loaded instead (if it exists)."
   ],
