--- a/assets/romfs/i18n/ko.json
+++ b/assets/romfs/i18n/ko.json
@@ -87,8 +87,8 @@
     "참고: 애플릿 모드에서는 경고 메시지가 표시되므로 IP 주소가 숨겨집니다."
   ],
   "Remove Background Music": "BGM 설정 해제",
-  "Removes the background music file": "설정된 배경 음악을 해제합니다",
-  "No background music file is set": "설정된 배경 음악이 없습니다",
+  "Removes the background music file": "설정된 배경 음악을 해제합니다.",
+  "No background music file is set": "설정된 배경 음악이 없습니다.",
   "Menus": "메뉴",
   "Web": "웹 브라우저",
   "Enter custom URL": "직접 지정",
@@ -110,21 +110,21 @@
   "hbmenu_replace_info": [
     "활성화: hbmenu.nro  Sphaira 교체",
     "비활성화: hbmenu 복원 옵션 제공\n",
-    "원본 hbmenu는 sdmc:/switch 경로에 백업"
+    "원본 hbmenu는 sdmc:/switch 경로에 백업됩니다."
   ],
   "Add / modify mounts": "Devoptab 마운트 관리",
   "mount_options_info": [
-    "HTTP · FTP · SFTP · SMB · NFS 등의",
+    "HTTP・FTP・SFTP・SMB・NFS 등의",
     "네트워크 마운트 옵션을 관리합니다.\n",
     "이름과 URL만 설정하면 되며,",
     "나머지 기타 옵션은 선택사항입니다.\n",
     "변경 사항을 적용하려면",
-    "Sphiara를 재시작해야 합니다."
+    "Sphaira를 재시작해야 합니다."
   ],
   "Boost CPU during transfer": "CPU 부스트",
   "transfer_boost_info": [
     "부스트 모드를 활성화합니다.\n",
-    "클럭: CPU 1785 Mhz  GPU 76 Mhz\n",
+    "클럭: CPU 1785 MHz  GPU 76 MHz\n",
     "파일 전송 시 위와 같이 클럭을 변경하여 파일 전송 속도를 향상시킵니다."
   ],
   "Text scroll speed": "텍스트 표시 속도",
@@ -280,7 +280,7 @@
   "Opens the FTP server on this port.": "해당 포트에서 FTP 서버를 시작합니다.",
   "Anon": "익명",
   "login_require_info": [
-    "활성화 시 사용자 · 비밀번호 설정 없이도 로그인 가능합니다.\n",
+    "활성화 시 사용자・비밀번호 설정 없이도 로그인 가능합니다.\n",
     "비활성화시 아래 옵션 설정이 필요합니다!"
   ],
   "User": "사용자",
@@ -293,7 +293,7 @@
   ],
   "Show album": "앨범",
   "Shows the microSD card album folder.": [
-    "- FTP\n이름: album_nand · album_sd\n",
+    "- FTP\n이름: album_nand・album_sd\n",
     "- MTP\n이름: Album (Image SD)\n\nSD 카드의 앨범 폴더를 표시합니다."
   ],
   "Show Atmosphere contents": "Atmosphere 콘텐츠",
@@ -347,7 +347,7 @@
   "mounts_ftp_info": [
     "이름: mounts\n\n마운트 폴더를 표시합니다.\n",
     "이 폴더에는 Sphaira에서 접근 가능한\n모든 마운트 옵션이 들어 있으며, FTP를 통해 접근 가능합니다!\n",
-    "예시: SMB · WebDav · FTP · SYSTEM\nUSER ·  SAFE · PRODINFO 등."
+    "예시: SMB・WebDav・FTP・SYSTEM\nUSER・ SAFE・PRODINFO 등."
   ],
   "Show switch": "홈브류",
   "homebrew_folder_info": [
@@ -378,7 +378,7 @@
     "이름: Mounts\n\n마운트 폴더를 표시합니다.\n",
     "이 폴더에는 Sphaira에서 접근 가능한",
     "모든 마운트 옵션이 들어 있으며, MTP를 통해 접근 가능합니다!\n",
-    "예시: SMB · WebDav · FTP · SYSTEM\nUSER ·  SAFE · PRODINFO 등."
+    "예시: SMB・WebDav・FTP・SYSTEM\nUSER・ SAFE・PRODINFO 등."
   ],
   "Show DevNull": "벤치마크",
   "usb_benchmark_info": [
@@ -388,7 +388,7 @@
   "HDD Options": "HDD 옵션",
   "mount_hdd_info": [
     "USBHDD 연결을 활성화합니다.\n\n장치는 파일 탐색기에서 확인 가능하며,",
-    "전송 · 설치 · 백업 장치로 사용합니다."
+    "전송・설치・백업 장치로 사용합니다."
   ],
   "HDD write protect": "HDD 쓰기 방지",
   "Makes the connected HDD read-only.": "연결된 장치를 읽기 전용으로 설정합니다.",
@@ -490,11 +490,11 @@
   "File Picker": "파일 선택기",
   "Failed to parse nro": "NRO 파싱 실패",
   "Name": "이름",
-  "Set the name of the application": "앱 이름 설정",
+  "Set the name of the application": "이름을 설정합니다.",
   "Author": "개발자",
-  "Set the author of the application": "앱 개발자 설정",
+  "Set the author of the application": "개발자를 설정합니다.",
   "Version": "버전",
-  "Set the display version of the application": "앱 버전 설정",
+  "Set the display version of the application": "버전 설정",
   "Set the path to the icon for the forwarder": "바로가기 경로 설정",
   "Create": "생성",
   "Failed to load icon": "아이콘 로드 실패",
@@ -702,7 +702,7 @@
   "Alphabetical (Star)": "알파벳순 (즐겨찾기)",
   "Size (Star)": "크기순 (즐겨찾기)",
   "Display entries in Ascending or Descending order.": "오름차순 또는 내림차순으로 정렬합니다.",
-  "Change the layout to List, Icon and Grid.": "레이아웃을 목록 · 아이콘 · 격자로 변경합니다.",
+  "Change the layout to List, Icon and Grid.": "레이아웃을 목록・아이콘・격자로 변경합니다.",
   "Show hidden": "숨겨진 항목 표시",
   "Shows all hidden homebrew.": "숨겨진 모든 항목을 표시합니다.",
   "Test": "테스트",
@@ -713,7 +713,7 @@
   "Mount NRO Fs": "NRO 마운트",
   "Failed to mount NRO FileSystem": "NRO 파일 시스템 마운트 실패",
   "Mounts the NRO FileSystem (icon, nacp and RomFS).": [
-    "NRO 파일 시스템에 마운트합니다\n\n대상: RomFS · NACP · ICON"
+    "NRO 파일 시스템에 마운트합니다\n\n대상: RomFS・NACP・ICON"
   ],
   "hb_remove_info": [
     "홈브류를 영구적으로 삭제합니다.\n",
@@ -757,13 +757,13 @@
   " (Unconnected)": " (연결 없음)",
   "The homebrew menu.\n\nAllows you to launch, delete and mount homebrew!": [
     "설치된 홈브류를 관리합니다.\n",
-    "실행 · 숨기기 · NRO 확인 · 삭제 및\n홈 화면에 바로가기를 설치 가능합니다."
+    "실행・숨기기・NRO 확인・삭제 및\n홈 화면에 바로가기를 설치 가능합니다."
   ],
   "Download and update apps.\n\nInternet connection required.": [
     "앱을 다운로드업데이트합니다.\n\n인터넷 연결이 필수입니다."
   ],
   "View all installed games. In this menu you can launch, backup, create savedata and much more.": [
-    "설치된 게임을 확인합니다.\n\n게임 실행 · 추출 · 관련 폴더 생성 등",
+    "설치된 게임을 확인합니다.\n\n게임 실행・추출・관련 폴더 생성 등",
     "다양한 기능을 이용할 수 있습니다."
   ],
   "Browse files on you SD Card. You can move, copy, delete, extract zip, create zip, upload and much more.\n\nA connected USB/HDD can be opened by mounting it in the advanced options.": [
@@ -772,7 +772,7 @@
     "고급 옵션을 통해 USBHDD를 연결하여 관리하는 것도 가능합니다."
   ],
   "View save data for each user. You can backup and restore saves.\n\nExperimental support for backing up system saves is possible.": [
-    "각 사용자의 세이브 데이터를 확인합니다.\n데이터를 백업 · 복원 가능합니다.\n",
+    "각 사용자의 세이브 데이터를 확인합니다.\n데이터를 백업・복원 가능합니다.\n",
     "참고: 시스템 백업은 실험적 기능입니다."
   ],
   "Download releases directly from GitHub. Custom entries can be added to /config/sphaira/github": [
@@ -784,7 +784,7 @@
   "USB Install": "USB 설치",
   "Install apps via USB.\n\nA USB client is required on PC.": "PC를 통해 게임을 설치합니다.",
   "View info on the inserted Game Card (GC). You can backup and install the inserted GC. To swap GC's, simply remove the old GC and insert the new one. You do not need to exit the menu.": [
-    "삽입된 카트리지 정보를 확인합니다.\n카트리지를 백업 · 설치 가능합니다.\n",
+    "삽입된 카트리지 정보를 확인합니다.\n카트리지를 백업・설치 가능합니다.\n",
     "메뉴를 종료할 필요 없이 카트리지를 교체할 수 있습니다."
   ],
   "IRS (Infrared Joycon Camera)": "조이콘 적외선 카메라",
@@ -813,7 +813,7 @@
   "Vietnamese": "Vietnamese",
   "Ukrainian": "Українська",
   "Launch one of Sphaira's menus:\n": "Sphaira 실행 메뉴:\n",
-  "\nYou can change the left/right menu in the Advanced Options.": "\n고급 옵션에서 좌·우측 메뉴를 교체 가능합니다.",
+  "\nYou can change the left/right menu in the Advanced Options.": "\n고급 옵션에서 메인 및 좌・우측 메뉴를 교체 가능합니다.",
   "Network": "네트워크",
   "Network Options": "네트워크 옵션",
   "Download update: ": "업데이트 다운로드: ",
@@ -896,7 +896,7 @@
   "Restore failed!": "복원 실패!",
   "Restore successfull!": "복원 성공!",
   "Set name for ": " 이름 설정",
-  "Set backup name": "백업 이름 설정",
+  "Set backup name": "백업 이름을 입력하세요",
   "Flushing zip to file": "ZIP을 파일로 기록 중...",
   "Disable MTP for usb install": "USB 설치를 위해 MTP 비활성화됨",
   "Re-enabled MTP": "MTP 재활성화됨",
@@ -932,8 +932,8 @@
   "Timeout": "타임아웃",
   "Timeout in milliseconds": "타임아웃 (밀리초)",
   "Optional: Set the timeout in seconds.": "선택 사항: 타임아웃을 초 단위로 설정합니다.",
-  "Optional: Set the username of the application": "선택 사항: 앱의 사용자 이름을 설정합니다.",
-  "Optional: Set the password of the application": "선택 사항: 애플리케이션의 비밀번호를 설정합니다.",
+  "Optional: Set the username of the application": "선택 사항: 사용자 이름을 설정합니다.",
+  "Optional: Set the password of the application": "선택 사항: 비밀번호를 설정합니다.",
   "Dump path": "덤프 경로",
   "Optional: Set the dump path used when exporting games and saves.": [
     "선택 사항: 게임 및 세이브 데이터의\n추출 경로를 지정합니다."
@@ -950,12 +950,12 @@
     "활성화 시 파일 탐색기가 폴더 내의",
     "파일 및 폴더 개수를 확인하지 않아,\n탐색 성능이 향상됩니다."
   ],
-  "FS hidden": "파일 탐색기 숨기기",
-  "Hide the mount from being visible in the file browser.": "마운트가 파일 탐색창에 표시되지 않도록 숨깁니다.",
-  "Export hidden": "추출 옵션 숨기기",
+  "FS hidden": "파일 탐색기에서 숨기기",
+  "Hide the mount from being visible in the file browser.": "파일 탐색창에서\n이 마운트가 표시되지 않도록 숨깁니다.",
+  "Export hidden": "추출 옵션에서 숨기기",
   "Hide the mount from being visible as a export option for games and saves.": [
-    "마운트가 게임 및 세이브 데이터를",
-    "추출 옵션에 표시하지 않도록 숨깁니다."
+    "게임 및 세이브 데이터 추출 옵션에서",
+    " 이 마운트가 표시되지 않도록 숨깁니다."
   ],
   "Save": "저장",
   "Mount entry saved. Restart Sphaira to apply changes.": "마운트 옵션 저장됨, Sphaira를 재시작하세요!",
@@ -967,20 +967,20 @@
   "Create New Entry": "새 항목 생성",
   "Creates a new mount option.\n\nNOTE: You must restart Sphaira for changes to take effect!": [
     "새 마운트 옵션을 생성합니다.\n",
-    "참고: 변경 사항을 적용하려면\nSphiara를 재시작해야 합니다."
+    "참고: 변경 사항을 적용하려면\nSphaira를 재시작해야 합니다."
   ],
   "Modify Existing Entry": "기존 항목 수정",
   "No mount entries found.": "마운트 옵션을 찾을 수 없습니다!",
   "Modify Entry": "수정할 항목",
   "Modify an existing mount option.\n\nNOTE: You must restart Sphaira for changes to take effect!": [
     "기존 마운트 옵션을 수정합니다.\n",
-    "참고: 변경 사항을 적용하려면\nSphiara를 재시작해야 합니다."
+    "참고: 변경 사항을 적용하려면\nSphaira를 재시작해야 합니다."
   ],
   "Delete Existing Entry": "기존 항목 삭제",
   "Delete Entry": "삭제할 항목",
   "Delete an existing mount option.\n\nNOTE: You must restart Sphaira for changes to take effect!": [
     "기존 마운트 옵션을 제거합니다.\n",
-    "참고: 변경 사항을 적용하려면\nSphiara를 재시작해야 합니다."
+    "참고: 변경 사항을 적용하려면\nSphaira를 재시작해야 합니다."
   ],
   "Section #": "섹션 #"
 }
