json: Fixed incorrect Simplified and Traditional Chinese labels

--- a/assets/romfs/i18n/uk.json
+++ b/assets/romfs/i18n/uk.json
@@ -758,12 +758,12 @@
   "German": "Deutsch",
   "Italian": "Italiano",
   "Spanish": "Español",
-  "Chinese (Simplified)": "繁體中文",
+  "Chinese (Simplified)": "简体中文",
   "Korean": "한국어",
   "Dutch": "Nederlands",
   "Portuguese": "Português",
   "Russian": "Русский",
-  "Chinese (Traditional)": "简体中文",
+  "Chinese (Traditional)": "繁體中文",
   "Swedish": "Svenska",
   "Vietnamese": "Tiếng Việt",
   "Ukrainian": "Українська",
