--- a/assets/romfs/i18n/ko.json
+++ b/assets/romfs/i18n/ko.json
@@ -803,12 +803,12 @@
   "German": "Deutsch",
   "Italian": "Italiano",
   "Spanish": "Español",
-  "Chinese (Simplified)": "繁體中文",
+  "Chinese (Simplified)": "简体中文",
   "Korean": "한국어",
   "Dutch": "Dutch",
   "Portuguese": "Português",
   "Russian": "Русский",
-  "Chinese (Traditional)": "简体中文",
+  "Chinese (Traditional)": "繁體中文",
   "Swedish": "Svenska",
   "Vietnamese": "Vietnamese",
   "Ukrainian": "Українська",
